@@ -3,7 +3,10 @@ Change log for java-dirq:
 ???	???
 	* [lc] changed all the tests to use a temporary directory
 	* [lc] cleaned the documentation
-	* [lc] simplified the signature of the purge() method
+	* [lc] simplified the signature of the purge() methods
+	* [lc] simplified the signature of the QueueSimple creator
+	* [lc] added support for QueueSimple's rndHex attribute
+	* [lc] added support for QueueSimple's maxLock and maxTemp attributes
 
 1.3	Fri Apr 12 2013
 	* [lc] first version recording changes...
